# CPP-OOP-Labs-Collection

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: Twelve.h  battle_visitor.h  concrete_fight_visitor.h  concrete_visitor.h  dragon.h  elf.h  factory.h  fight_visitor.h  figure.h  helpers.h  knight_errant.h  map_printer.h  npc.h  npc_type.h  queue.h  square.h  trapeze.h
lab-03/include/: figure.h  pentagon.h  point.h  rhombus.h
lab-03/lab-02/test/: tests01.cpp
lab-03/src/: pentagon.cpp  rhombus.cpp  trapeze.cpp
lab-03/test/: tests01.cpp
lab-04/: README.md  main.cpp
lab-04/include/: array.h  octagon.h  point.h  triangle.h
lab-05/: CMakeLists.txt
lab-05/include/: fixed_block_memory_resource.h
lab-05/src/: fixed_block_memory_resource.cpp
lab-05/test/: tests01.cpp
lab-06/: CMakeLists.txt  main.cpp
lab-06/include/: dragon.h  knight_errant.h  npc.h  observer.h  visitor.h
lab-06/src/: dragon.cpp  elf.cpp  npc.cpp  observer.cpp
lab-06/test/: tests01.cpp
lab-07/: CMakeLists.txt  README.md
lab-07/include/: common.h  dragon.h  elf.h  fight_manager.h  npc.h  observer.h  visitor.h
lab-07/src/: battle_visitor.cpp  fight_manager.cpp  npc.cpp
src/: Twelve.cpp  common.cpp  concrete_fight_visitor.cpp  dragon.cpp  elf.cpp  factory.cpp  figure.cpp  helpers.cpp  knight_errant.cpp  map_printer.cpp  npc.cpp  observer.cpp
test/: tests01.cpp
